# 066-llm-news-interpretation

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: backtest.rs  basic_news_analysis.rs  live_trading.rs
experiments/: test_sentiment.rs
src/: lib.rs
src/analysis/: aggregator.rs  events.rs  mod.rs  sentiment.rs
src/llm/: client.rs  mod.rs  parser.rs  prompts.rs
src/news/: mod.rs  preprocessor.rs  sources.rs  types.rs
src/strategy/: mod.rs  news_strategy.rs  position.rs  risk.rs
src/utils/: config.rs  logging.rs  metrics.rs  mod.rs
tests/: integration.rs
