[package]
name = "llm_news_interpretation"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading"]
description = "LLM-based news interpretation for cryptocurrency trading signals"
license = "MIT"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["trading", "llm", "news", "cryptocurrency", "bybit"]
categories = ["finance", "science"]

[lib]
name = "llm_news_interpretation"
path = "src/lib.rs"

[[example]]
name = "basic_news_analysis"
path = "examples/basic_news_analysis.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[example]]
name = "live_trading"
path = "examples/live_trading.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# Caching
lru = "0.12"

# Statistics and math
statrs = "0.16"

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# Rate limiting
governor = "0.6"

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Regex for text processing
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
tempfile = "3.9"

[features]
default = []
openai = []
anthropic = []
local-llm = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[[example]]
name = "test_sentiment"
path = "experiments/test_sentiment.rs"
